format spaces adn add comments to group_vars

--- a/ansible_collections/arista/avd/examples/single-dc-l3ls/group_vars/DC1_L3_LEAVES/l3_leaves.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-l3ls/group_vars/DC1_L3_LEAVES/l3_leaves.yml
@@ -7,7 +7,7 @@ l3leaf:
     loopback_ipv4_pool: 10.255.0.0/27
     loopback_ipv4_offset: 2
     vtep_loopback_ipv4_pool: 10.255.1.0/27
-    uplink_switches: ['dc1-spine1', 'dc1-spine2']
+    uplink_switches: [dc1-spine1, dc1-spine2]
     uplink_ipv4_pool: 10.255.255.0/26
     mlag_peer_ipv4_pool: 10.255.1.64/27
     mlag_peer_l3_ipv4_pool: 10.255.1.96/27
