Feat(eos_cli_config_gen): Add comment to ethernet and port-channel interfaces

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
@@ -1653,6 +1653,8 @@ interface Port-Channel3
    isis authentication key 0 password
 !
 interface Port-Channel5
+   !! this is my interface do not touch
+   !! it connects to the super firewall
    description DC1_L2LEAF1_Po1
    bgp session tracker ST2
    switchport trunk allowed vlan 110,201
@@ -2266,6 +2268,8 @@ interface Dps1
    load-interval 42
 !
 interface Ethernet1
+   !! this is my interface do not touch
+   !! it connects to the super firewall
    traffic-policy input BLUE-C1-POLICY
    traffic-policy output BLUE-C2-POLICY
    description P2P_LINK_TO_DC1-SPINE1_Ethernet1
