Feat(eos_cli_config_gen): Added support for Virtual Router MAC Address Advertisement Interval (#4891)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
@@ -4161,6 +4161,7 @@ interface profile TEST-PROFILE-2
    command ptp enable
 !
 ip virtual-router mac-address 00:1c:73:00:dc:01
+ip virtual-router mac-address advertisement-interval 40
 !
 ip address virtual source-nat vrf TEST_01 address 1.1.1.1
 ip address virtual source-nat vrf TEST_02 address 1.1.1.2
