Feat(eos_cli_config_gen): Add support for ip name server groups (#4763)
Co-authored-by: Laxmikant Chintakindi <laxmikant.c-ext@Laxmikants-MacBook-Pro.local>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>
Co-authored-by: Mahesh Kumar <122076792+MaheshGSLAB@users.noreply.github.com>
Co-authored-by: Vibhu-gslab <109593615+Vibhu-gslab@users.noreply.github.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
@@ -418,6 +418,25 @@ monitor server radius
    probe threshold failure 100
    probe method access-request username arista password 7 141600021F102B
 !
+ip name-server group mynameserver0
+   name-server vrf default 1.1.1.1 priority 0
+   name-server vrf default 8.8.8.8
+   name-server vrf default 2.2.2.2 priority 1
+!
+ip name-server group mynameserver1
+   name-server vrf default 1.1.1.1
+   name-server vrf vrf1 2.2.2.1
+   name-server vrf vrf1 8.8.8.8
+   name-server vrf vrf1 2.2.2.2 priority 1
+   name-server vrf a_vrf 2.2.2.7 priority 3
+   name-server vrf b_vrf 2.2.2.6 priority 3
+   name-server vrf vrf1 2.2.2.4 priority 4
+   dns domain arista.avd.com
+   ip domain-list domain-list1
+!
+ip name-server group mynameserver2
+   dns domain anta.avd.com
+!
 platform trident mmu queue profile mc_example_profile
     egress unicast queue 1 reserved bytes 0
     egress unicast queue 2 reserved cells 0
@@ -3980,6 +3999,7 @@ monitor connectivity
          url https://server2.local.com
    !
    vrf yellow
+   name-server group mynameserver1
    interval 5
    no shutdown
    interface set GLOBAL_SET Ethernet1-4
