Test(eos_cli_config_gen): Improve test coverage part 1 (#4781)
Co-authored-by: Laxmikant Chintakindi <laxmikant.c-ext@Laxmikants-MacBook-Pro.local>
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>
Co-authored-by: Claus Holbech <holbech@arista.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Kyle Bush <75400046+kpbush30@users.noreply.github.com>
Co-authored-by: Mahesh Kumar <122076792+MaheshGSLAB@users.noreply.github.com>
Co-authored-by: Mahesh Kumar <mahesh.kumar-ext@Maheshs-MacBook-Pro.local>
Co-authored-by: n!co <93599629+ccsnw@users.noreply.github.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/host1.cfg
@@ -59,7 +59,7 @@ logging event storm-control discards global
 logging event storm-control discards interval 10
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvaddr=10.10.10.8:9910,10.10.10.9:9910,10.10.10.10:9910 -cvauth=key,magickey -cvvrf=mgt -cvgnmi -disableaaa -cvproxy=http://arista:arista@10.10.10.1:3128 -grpcaddr=mgmt/0.0.0.0:6042 -grpcreadonly -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs=/var/log/messages,/var/log/agents/ -cvconfig -cvsourceintf=Vlan100
+   exec /usr/bin/TerminAttr -cvaddr=10.10.10.8:9910,10.10.10.9:9910,10.10.10.10:9910 -cvauth=key,magickey -cvvrf=mgt -cvsourceip=10.10.10.10 -cvgnmi -cvobscurekeyfile -disableaaa -cvproxy=http://arista:arista@10.10.10.1:3128 -grpcaddr=mgmt/0.0.0.0:6042 -grpcreadonly -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs=/var/log/messages,/var/log/agents/ -ecodhcpaddr=127.0.0.1:67 -ipfix -ipfixaddr=10.10.10.12 -sflow -sflowaddr=10.10.10.11 -cvconfig -cvsourceintf=Vlan100
    no shutdown
 !
 daemon ocprometheus
@@ -353,6 +353,7 @@ link tracking group EVPN_MH_ES2
 !
 lldp timer 30
 lldp hold-time 90
+lldp timer reinitialization 10
 no lldp tlv transmit system-capabilities
 lldp tlv transmit system-description
 no lldp run
@@ -364,7 +365,8 @@ logging repeat-messages
 logging buffered 1000000 warnings
 no logging trap
 logging console errors
-logging synchronous level critical
+no logging monitor
+logging synchronous level warnings
 logging host 20.20.20.7
 logging host 50.50.50.7 100 200 protocol tcp
 logging host 60.60.60.7 100 200
@@ -382,6 +384,9 @@ logging vrf vrf_with_no_source_interface host 1.2.3.4
 logging vrf vrf_with_no_source_interface host 2001:db8::1:2:3:4
 logging format timestamp traditional year timezone
 logging format rfc5424
+logging format hostname fqdn
+logging format sequence-numbers
+logging source-interface Ethernet2
 logging source-interface Loopback0
 logging vrf mgt source-interface Management0
 logging policy match match-list molecule discard
@@ -980,6 +985,10 @@ sflow vrf BBB destination 10.6.75.62
 sflow vrf BBB source 1.1.1.1
 sflow vrf CCC destination 10.6.75.62
 sflow vrf CCC source-interface Management1
+sflow vrf DDD destination 10.6.75.62
+sflow vrf DDD source 1.1.1.1
+sflow vrf EEE destination 10.6.75.62
+sflow vrf EEE source 1.1.1.1
 sflow vrf MGMT destination 10.6.75.59
 sflow vrf MGMT destination 10.6.75.62 123
 sflow vrf MGMT destination 10.6.75.63 333
@@ -1649,6 +1658,7 @@ mac security
       mka session rekey-period 30
       traffic unprotected allow
       sci
+      l2-protocol ethernet-flow-control bypass
       l2-protocol lldp bypass unauthorized
    !
    profile A2
@@ -1729,7 +1739,7 @@ interface Port-Channel8
 interface Port-Channel8.101
    description to Dev02 Port-Channel8.101 - VRF-C1
    encapsulation dot1q vlan 101
-   ip address 10.1.2.3/31
+   ipv6 address cafe::b4
 !
 interface Port-Channel9
    no switchport
@@ -1943,7 +1953,8 @@ interface Port-Channel100.101
    mtu 1500
    logging event link-status
    encapsulation dot1q vlan 101
-   ip address 10.1.1.3/31
+   ipv6 address cafe::b4
+   ipv6 nd managed-config-flag
 !
 interface Port-Channel100.102
    description IFL for TENANT02
@@ -2033,6 +2044,7 @@ interface Port-Channel110
 interface Port-Channel111
    description Flexencap Port-Channel
    no switchport
+   isis passive
 !
 interface Port-Channel111.1
    description TENANT_A pseudowire 1 interface
@@ -4444,6 +4456,8 @@ monitor session myMonitoringSession1 source Ethernet1 ipv6 access-group ipv6ACL
 monitor session myMonitoringSession1 source Ethernet5 both ip access-group ipv4ACL priority 10
 monitor session myMonitoringSession1 destination Ethernet48
 monitor session myMonitoringSession1 truncate
+monitor session myMonitoringSession1 rate-limit per-ingress-chip 100 kbps
+monitor session myMonitoringSession1 rate-limit per-egress-chip 100 kbps
 monitor session myMonitoringSession1 header remove size 32
 monitor session myMonitoringSession1 encapsulation gre metadata tx
 monitor session myMonitoringSession2 ip access-group ipv4ACL
@@ -4453,6 +4467,7 @@ monitor session myMonitoringSession2 source Ethernet12 rx
 monitor session myMonitoringSession2 source Ethernet18 tx
 monitor session myMonitoringSession2 destination Cpu
 monitor session myMonitoringSession2 destination Ethernet50
+monitor session myMonitoringSession2 truncate size 100
 monitor session myMonitoringSession2 sample 50
 monitor session myMonitoringSession2 encapsulation gre metadata tx
 monitor session myMonitoringSession3 source Ethernet20 both ip access-group ipv4ACL priority 10
@@ -4660,11 +4675,18 @@ monitor telemetry postcard policy
          destination prefix 10.3.3.0/24
          protocol udp source port bgp destination port https
    !
+   sample policy samplepo4
+      match rule1 ipv4
+         source prefix 3.4.5.0/24
+         destination prefix 10.3.3.0/24
+   !
    profile profile1
       ingress sample policy samplepo1
    !
    profile profile2
       ingress sample policy samplepo2
+   !
+   profile profile3
 !
 qos rewrite dscp
 qos map cos 1 2 3 4 to traffic-class 2
@@ -4850,6 +4872,7 @@ router bgp 65101
    update wait-install
    bgp default ipv4-unicast
    bgp default ipv4-unicast transport ipv6
+   timers bgp 300 300 min-hold-time 300 send-failure hold-time 300
    distance bgp 20 200 200
    graceful-restart restart-time 555
    graceful-restart stalepath-time 666
@@ -4863,6 +4886,7 @@ router bgp 65101
    bgp listen range 12.10.10.0/24 peer-id include router-id peer-group my-peer-group3 remote-as 65444
    bgp listen range 13.10.10.0/24 peer-group my-peer-group4 peer-filter my-peer-filter
    bgp bestpath d-path
+   neighbor default send-community
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS remote-as 65001
    neighbor EVPN-OVERLAY-PEERS weight 100
@@ -5325,6 +5349,7 @@ router bgp 65101
       network 10.0.0.0/8
       network 172.16.0.0/12
       network 192.168.0.0/16 route-map RM-FOO-MATCH
+      no bgp redistribute-internal
       redistribute attached-host route-map RM_BGP_EVPN_IPV4
       redistribute bgp leaked route-map RM_BGP_EVPN_IPV4
       redistribute connected include leaked rcf Address_Family_IPV4_Connected()
@@ -5346,8 +5371,10 @@ router bgp 65101
       bgp additional-paths receive
       bgp additional-paths send ecmp limit 20
       bgp next-hop-unchanged
+      neighbor default next-hop-self
       next-hop resolution ribs tunnel-rib colored system-colored-tunnel-rib tunnel-rib test-rib system-connected
       neighbor PG-BGP-LU activate
+      neighbor PG-BGP-LU graceful-restart
       neighbor PG-BGP-LU route-map RM_BGP_LU_IN in
       neighbor PG-BGP-LU route-map RM_BGP_LU_OUT out
       neighbor PG-BGP-LU additional-paths send ecmp limit 10
@@ -5368,12 +5395,15 @@ router bgp 65101
       neighbor PG-BGP-LU2 next-hop-self v4-mapped-v6 source-interface Ethernet1
       no neighbor PG-BGP-LU3 activate
       neighbor PG-BGP-LU3 next-hop-self source-interface Ethernet2
+      no neighbor PG-BGP-LU4 activate
+      neighbor PG-BGP-LU4 additional-paths send limit 10
       no neighbor 192.168.66.21 activate
       neighbor 192.168.66.21 additional-paths send limit 11
       no neighbor 192.168.66.22 activate
       no neighbor 192.168.66.22 additional-paths send
       neighbor 198.51.100.1 activate
       neighbor 198.51.100.1 additional-paths receive
+      neighbor 198.51.100.1 graceful-restart
       neighbor 198.51.100.1 rcf in RCF_TEST()
       neighbor 198.51.100.1 rcf out RCF_TEST_OUT()
       neighbor 198.51.100.1 additional-paths send ecmp limit 11
@@ -5467,6 +5497,7 @@ router bgp 65101
       neighbor 2001:db8::22 additional-paths send limit 5
       network 2001:db8:100::/40
       network 2001:db8:200::/40 route-map RM-BAR-MATCH
+      bgp redistribute-internal
       redistribute attached-host
       redistribute bgp leaked route-map RM-REDISTRIBUTE-BGP
       redistribute dhcp
@@ -5877,6 +5908,8 @@ router bgp 65101
          redistribute static route-map VRF_AFIPV6MULTI_RM_STATIC
    !
    vrf VRF02
+      bgp additional-paths install ecmp-primary
+      bgp additional-paths send limit 20
       neighbor 1.1.1.1 additional-paths receive
       neighbor 1.1.1.1 additional-paths send ecmp limit 24
       neighbor 1.1.1.1 password 7 CRWZZy7NjZF5vUQbiZLrzw==
@@ -6078,6 +6111,8 @@ router multicast
    vrf MCAST_VRF2
       ipv4
          routing
+   !
+   vrf MCAST_VRF3
 !
 router ospf 100
    router-id 192.168.255.3
@@ -6223,6 +6258,7 @@ router msdp
       group-limit 22 source 10.0.22.0/24
       originator-id local-interface Loopback12
       rejected-limit 10
+      forward register-packets
       connection retry interval 10
       !
       peer 2.3.4.5
@@ -6233,6 +6269,12 @@ router msdp
          sa-filter out list ACL4
          description Some other kind of MSDP Peer
          sa-limit 100
+      !
+      peer 2.3.4.6
+         default-peer prefix-list PL1
+         mesh-group MG1
+         mesh-group MG2
+         disabled
 !
 stun
    client
