--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/host1/logging.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/host1/logging.yml
@@ -1,17 +1,21 @@
+---
 ### Logging ###
 logging:
   console: errors
+  monitor: disabled
   buffered:
     size: 1000000
     level: warnings
   repeat_messages: true
   trap: disabled
   synchronous:
-    level:
+    level: warnings
   format:
     timestamp: traditional year timezone
     rfc5424: true
-  source_interface:
+    hostname: fqdn
+    sequence_numbers: true
+  source_interface: Ethernet2
   vrfs:
     - name: mgt
       source_interface: Management0
